src/test/resources/public/input/typechecking/pass/pass20.jova
class Helper0{
}

class Helper1{
}

class TestPass{
    /* other signature as the global methods */
    private int func (string a) {
        return -1;
    }

    private int func (int a) {
        return -1;
    }

    private int func (bool a) {
        return -1;
    }

    private int func (Helper0 a) {
        return -1;
    }

    private int func (Helper1 a) {
        return -1;
    }

}