src/test/resources/public/input/typechecking/fail/double_decl/fail10.jova
class TestFail{
    /* same signature as the global methods */
    private int print (string a) {
        return -1;
    }

    private int print (int a) {
        return -1;
    }
    private int print (bool a) {
        return -1;
    }

    private string readString (){
        return -1;
    }

    private int readInt () {
        return -1;
    }
}